slaops cloud updates for API spec
